--- a/exercises/demo/web/index.html
+++ b/exercises/demo/web/index.html
@@ -1,4 +1,11 @@
 <!DOCTYPE html>
 <html>
-  <body><h1>Hello</h1></body>
+  <body>
+    <h1>Hello</h1>
+    <h2>Thank you for visiting my webpage.</h2>
+    <br><br><br>
+    
+    <i>Graphic Design is my passion</i>
+    
+  </body>
 </html>
